Sprint 3
- About Us page
- Not Found page
- Drag and drop feature on Tasks page
- API documentation for updateTasks and deleteTask
